Fixed spacing bug when changing height of toolbar

--- a/checked-web/src/components/MapEditor/CSS/EditorCard.css
+++ b/checked-web/src/components/MapEditor/CSS/EditorCard.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 :root {
   --Primary: #ff9e00;
   --Dark: #cf6e00;
@@ -8,7 +10,30 @@
 
 }
 
+.editorHeader{
+    height: 43px !important;
+}
+
+/*
+Changing height on here will affect zone loading
+Be sure to edit the save function yValue to acomidate
+*/
+.editorCardTitle{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 18pt;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.cardToolbar{
+    padding-left: 5px !important;
+    height: 30px;
+    min-height: 0px !important;
+}
+
 .editorCard{
+    
     width: calc(100% - 90px);
     height: calc(100vh - 100px);
     margin-top: 75px;
@@ -20,5 +45,6 @@
 .editorContent {
     padding: 0px !important;
     overflow: hidden;
+
 }
 
